--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -113,7 +113,7 @@ input[type="checkbox"]:focus {
 /* 버튼 기본 스타일 */
 button {
     border: 3px solid #e8544f;
-    padding: 0px 10px;
+    padding: 0 10px;
     border-radius: 3px;
     color: #ffffff;
     background-color: #ff847a;
