--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -148,7 +148,7 @@ button {
     background-color: #7EA5C6;
     color: white;
     border: none;
-    border-radius: 3px; /* 동그란 모양으로 만듦 */
+    border-radius: 3px;
     font-size: 18px;
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 약간의 그림자 효과 */
