--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -77,7 +77,9 @@
             </div>
         </div>
         <!-- 최상단으로 이동 버튼 -->
-        <button class="button-group-go-up" onclick="scrollToTop()">최상단으로 이동</button>
+        <button class="button-group-go-up" onclick="scrollToTop()">
+            최상단으로 이동
+        </button>
     </div>
 </main>
 </body>
