--- a/src/main/resources/templates/activity/follower.html
+++ b/src/main/resources/templates/activity/follower.html
@@ -36,6 +36,13 @@
         <td th:text="${user.userName}">default value</td>
       </tr>
     </table>
+    <div class="paging">
+      <a th:href="@{/activity/follower(page=${page - 1}, pageSize=10)}" th:if="${page > 1}">이전</a>
+
+      <span><span th:text="${page}">1</span></span>
+
+      <a th:href="@{/activity/follower(page=${page + 1}, pageSize=10)}">다음</a>
+    </div>
   </div>
 </main>
 </body>
